hphp/hack/test/typecheck/global_write_check/test_control_flow.php.exp
File "test_control_flow.php", line 13, characters 5-25:
A global variable is written. (Typing[4459])
File "test_control_flow.php", line 17, characters 5-16:
A global variable is written. (Typing[4459])
File "test_control_flow.php", line 21, characters 5-16:
A global variable is written. (Typing[4459])
File "test_control_flow.php", line 26, characters 7-18:
A global variable is written. (Typing[4459])
File "test_control_flow.php", line 31, characters 5-16:
A global variable is written. (Typing[4459])
